--- a/stylesheet.css
+++ b/stylesheet.css
@@ -91,8 +91,8 @@ margin-right: 5px;
     margin-bottom: 0; /* なぜかこれがないとmainの右余白がなくなる??, header,footerの右端も空きができる */
 }
 .Introduction{
-display: block;
-margin-right: 0; /* 余白: [上][右][下][左] */
+display: flex;
+margin: 0 0 0 auto; /* 余白: [上][右][下][左] */
 }
 .Introduction intro_title p{
     text-align: left;
