--- a/stylesheet.css
+++ b/stylesheet.css
@@ -99,8 +99,7 @@ margin: 0 0 0 auto; /* 余白: [上][右][下][左] */
     font-size: 10px;
 }
 .Introduction intro_sentence p{
-    text-align: justify;
-    text-justify: inter-ideograph;
+    text-align: left;
     font-size: 8px;
-    line-height: normal;
+    /* line-height: normal; */
 }
