--- a/stylesheet.css
+++ b/stylesheet.css
@@ -92,14 +92,15 @@ margin-right: 5px;
 }
 .Introduction{
 display: flex;
+flex-flow: column;
 margin: 0 0 0 auto; /* 余白: [上][右][下][左] */
 }
 .Introduction intro_title p{
-    text-align: left;
+    /* text-align: left; */
     font-size: 10px;
 }
 .Introduction intro_sentence p{
-    text-align: left;
+   /* text-align: left; */
     font-size: 8px;
     /* line-height: normal; */
 }
