--- a/stylesheet.css
+++ b/stylesheet.css
@@ -92,8 +92,10 @@ margin-right: 5px;
 }
 .Introduction{
 display: flex;
-flex-flow: column;
-margin: 0 0 0 auto; /* 余白: [上][右][下][左] */
+flex-flow: column; /* 要素(文)を縦に配置 */
+justify-content: flex-start; /* 要素(文)を左寄せで配置 */
+margin-left: auto;
+margin-right: 30px;
 }
 .Introduction intro_title p{
     /* text-align: left; */
