--- a/stylesheet.css
+++ b/stylesheet.css
@@ -69,13 +69,27 @@ background-color: #eee; /* #888 check */
 margin-right: 5px; /* 10px 30pxだと右の余白が空きすぎる */
 	/* right: 10px; */
 }
+
+/* #################### */
 .itemC{
-background-color: #888;
-/* text-align: center; */	
+background-color: #888;	
 margin-right: 5px;
-display: flex;
-	/* right: 10px; */
 }
+.itemC diary_title p{
+display: flex;
+flex-flow: column;
+justify-content: flex-start; /* 要素(文)を左寄せで配置 */
+font-size: 14px;
+}
+.itemC diary_link a{
+  color: black;
+}
+.itemC diary_archives a{
+  color: black;
+  text-decoration: none;
+}
+/* #################### */
+
 .itemD{
 background-color: #888;
 text-align: center;
