--- a/stylesheet_c05_diary_archives.css
+++ b/stylesheet_c05_diary_archives.css
@@ -41,14 +41,16 @@ body{
   text-decoration: none; /* リンクの下線を非表示 */
 }
 
-p a {	 
+main{
+
+}
+
+
+.diary-list diary_item a {	 
  color: black;
  text-decoration: none; 	 
 }  
 
-main{
-
-}
 
 
 .footer{
