--- a/Diary/stylesheet_diary_common.css
+++ b/Diary/stylesheet_diary_common.css
@@ -54,19 +54,19 @@ line-height: 1; /* 2 */
 
 .h2 {
 font-size: 14px;
-line-height: 1;
+line-height: 0.8;
 }
 
 .diary_sent p{
 font-size: 12px;
-line-height: 0.8; /* 1.5 */
+line-height: 0.5; /* 0.8 1.5 */
 }
 
 .footer{
     height: 300px; /* 220px 200px 165px (70px) 140px */
     /*　width: 100%;　*/ 
     text-align: center;
-    background-color: #eee;
+    background-color: #888; /* #eee */
     margin: 10px 0 10px 0;
     margin-bottom: 0; /* なぜかこれがないとmainの右余白がなくなる??, header,footerの右端も空きができる */
 }
