--- a/Diary/stylesheet_diary_common.css
+++ b/Diary/stylesheet_diary_common.css
@@ -45,19 +45,20 @@ main{
 display: flex;
 flex-direction: column; /* 要素(文)を縦に配置 */
 justify-content: flex-start; /* 要素(文)を左寄せで配置 */
+margin-left: 10px;
 }
 
-.h1 {
+.main h1 {
 font-size: 18px;
 line-height: 1; /* 2 */
 }
 
-.h2 {
+.main h2 {
 font-size: 14px;
 line-height: 0.8;
 }
 
-.diary_sent p{
+.main diary_sent p{
 font-size: 12px;
 line-height: 0.5; /* 0.8 1.5 */
 }
@@ -66,7 +67,7 @@ line-height: 0.5; /* 0.8 1.5 */
     height: 300px; /* 220px 200px 165px (70px) 140px */
     /*　width: 100%;　*/ 
     text-align: center;
-    background-color: #888; /* #eee */
+    background-color: #eee; /* #eee #888 */
     margin: 10px 0 10px 0;
     margin-bottom: 0; /* なぜかこれがないとmainの右余白がなくなる??, header,footerの右端も空きができる */
 }
