--- a/stylesheet.css
+++ b/stylesheet.css
@@ -112,9 +112,8 @@ margin-right: 5px;
 .footer intro_box {
 display: flex;
 flex-direction: column; /* 要素(文)を縦に配置  flex-flow: column; */
-justify-content: flex-end; /* 要素(文)を左寄せで配置 flex-start */
-margin-left: auto;
-margin-right: 30px;
+justify-content: flex-start; /* 要素(文)を左寄せで配置 */
+margin: 0 0 0 auto;
 }
 
 .footer intro_box h3{
