--- a/stylesheet.css
+++ b/stylesheet.css
@@ -64,15 +64,16 @@ grid-gap: 10px;
 }
 
 .itemB{
-background-color: #eee; /* #888 check */
+background-color: #888; /* #888 check */
  text-align: center;
+ font-color: white;
 margin-right: 5px; /* 10px 30pxだと右の余白が空きすぎる */
 	/* right: 10px; */
 }
 
 /* #################### */
 .itemC{
-background-color: #888;	
+background-color: #eee;	
 margin-right: 5px;
 }
 .main itemC diary_title p{
