--- a/Diary/stylesheet_diary_common.css
+++ b/Diary/stylesheet_diary_common.css
@@ -21,6 +21,11 @@ body{
     margin: 10px 0 5px 0;
 }
 
+.title_link p a {
+  color: black; /* リンクの色を指定 */
+  text-decoration: none; /* リンクの下線を非表示 */
+}
+
 .nav{
    height: 70px;
     background-color: #888;
