--- a/stylesheet.css
+++ b/stylesheet.css
@@ -110,16 +110,16 @@ margin-right: 5px;
     margin-bottom: 0; /* なぜかこれがないとmainの右余白がなくなる??, header,footerの右端も空きができる */
 }
 
-.footer intro_box {
+.intro_box{
 display: flex;
 flex-direction: column; /* 要素(文)を縦に配置  flex-flow: column; */
 justify-content: flex-start; /* 要素(文)を左寄せで配置 */
-margin: 0 0 0 auto;
+margin-right: 0;
 }
 
-.footer intro_box h3{
+.intro_box h3{
     font-size: 10px;
 }
-.footer intro_box p{
+.intro_box p{
     font-size: 8px;
 }
