--- a/stylesheet.css
+++ b/stylesheet.css
@@ -87,17 +87,15 @@ display: block; /* */
  Word-break: break-all;
  line-height: 0.5;
 }
-.diary_link a{
+
+.diary-list li a{
+　list-style-type: none;
   color: black;
   font-size: 16px; 
   line-height: 0.5;
-}
-.diary_archive_link a{
-  color: black;
   text-decoration: none;
-  font-size: 14px;
-  margin-right: 5px;
-  margin-left: auto;
+  margin-right: auto;
+  margin-left: 2px;
   line-height: 0.5;
 }
 /* #################### */
