--- a/stylesheet.css
+++ b/stylesheet.css
@@ -93,7 +93,7 @@ display: block; /* */
   color: black;
   font-size: 16px; 
   line-height: 0.5;
-  text-decoration: none;
+  text-decoration: none!important; /* */
   margin-right: auto;
   margin-left: 2px;
 }
