--- a/stylesheet.css
+++ b/stylesheet.css
@@ -3,6 +3,10 @@
 	position: static;
 }
 
+a {
+  text-decoration: none; /* 全リンクの下線を非表示 */
+}
+
 body{
     display: flex;
     flex-direction: column;
@@ -38,7 +42,7 @@ body{
 
 .header-list a{
   color: white; /* リンクの色を指定 */
-  text-decoration: none; /* リンクの下線を非表示 */
+ /* text-decoration: none; */
 }
 
 main{
@@ -93,7 +97,6 @@ display: block; /* */
   color: black;
   font-size: 16px; 
   line-height: 0.5;
-  text-decoration: none!important; /* */
   margin-right: auto;
   margin-left: 2px;
 }
@@ -116,10 +119,8 @@ margin-right: 5px;
 }
 
 .intro_box{
- margin-top: 30px;
- margin-right: 50px;
- margin-left: auto;
- width: 30%;
+ margin: 100px 50px 10px auto;
+ /* width: 30%; */
  display: block; /* flexではダメだった */
 }
 
@@ -128,5 +129,5 @@ margin-right: 5px;
 }
 .intro_box p{
     font-size: 12px;
-    line-height: 0.5;
+    line-height: 0.7;
 }
